--- a/splash.html
+++ b/splash.html
@@ -2,159 +2,97 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>HarDil – Welcome</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>HarDil Intro</title>
 
 <style>
-:root {
-  --bg1: #6a7cff;
-  --bg2: #8f5cff;
-}
-
 body {
   margin: 0;
   height: 100vh;
-  background: linear-gradient(135deg, var(--bg1), var(--bg2));
+  background: linear-gradient(135deg,#667eea,#764ba2);
   display: flex;
   justify-content: center;
   align-items: center;
-  font-family: "Segoe UI", system-ui, sans-serif;
+  font-family: "Segoe UI", sans-serif;
   overflow: hidden;
   color: white;
 }
 
+/* container */
 .scene {
-  position: relative;
-  width: 320px;
-  height: 420px;
   text-align: center;
 }
 
-/* PERSONS */
-.person {
-  width: 90px;
-  height: 90px;
-  border-radius: 50%;
-  background: #fff;
-  position: absolute;
-  top: 90px;
+/* people */
+.people {
+  font-size: 64px;
+  display: flex;
+  gap: 40px;
+  justify-content: center;
+  animation: meet 1.6s ease forwards;
+}
+
+@keyframes meet {
+  from { gap: 200px; opacity: 0; }
+  to { gap: 20px; opacity: 1; }
+}
+
+/* heart */
+.heart {
+  font-size: 42px;
   opacity: 0;
-}
-
-.left {
-  left: -120px;
-  animation: enterLeft 1s ease forwards;
-}
-
-.right {
-  right: -120px;
-  animation: enterRight 1s ease forwards;
-}
-
-@keyframes enterLeft {
-  to { left: 40px; opacity: 1; }
-}
-
-@keyframes enterRight {
-  to { right: 40px; opacity: 1; }
-}
-
-/* HANDSHAKE */
-.handshake {
-  position: absolute;
-  top: 115px;
-  left: 50%;
-  width: 30px;
-  height: 30px;
-  background: #ffd166;
-  border-radius: 50%;
-  transform: translateX(-50%) scale(0);
-  animation: shake 0.6s ease forwards;
-  animation-delay: 1.1s;
-}
-
-@keyframes shake {
-  to { transform: translateX(-50%) scale(1); }
-}
-
-/* HUG */
-.hug {
-  position: absolute;
-  top: 80px;
-  left: 50%;
-  width: 140px;
-  height: 140px;
-  border-radius: 50%;
-  background: rgba(255,255,255,0.15);
-  transform: translateX(-50%) scale(0);
   animation: hug 0.8s ease forwards;
-  animation-delay: 1.8s;
+  animation-delay: 1.6s;
 }
 
 @keyframes hug {
-  to { transform: translateX(-50%) scale(1); }
+  from { opacity: 0; transform: scale(0.5); }
+  to { opacity: 1; transform: scale(1); }
 }
 
-/* APP ORBIT */
-.orbit {
-  position: absolute;
-  top: 70px;
-  left: 50%;
-  width: 180px;
-  height: 180px;
-  border-radius: 50%;
-  transform: translateX(-50%) scale(0);
-  animation: orbitIn 0.8s ease forwards;
-  animation-delay: 2.6s;
+/* icons */
+.resources {
+  display: flex;
+  justify-content: center;
+  gap: 18px;
+  margin-top: 18px;
+  opacity: 0;
+  animation: spinIn 1.2s ease forwards;
+  animation-delay: 2.4s;
 }
 
-@keyframes orbitIn {
-  to { transform: translateX(-50%) scale(1); }
+.resources span {
+  font-size: 22px;
+  animation: spin 1.2s linear infinite;
 }
 
-.orbit span {
-  position: absolute;
-  font-size: 20px;
-  animation: spin 2.5s linear infinite;
+@keyframes spinIn {
+  to { opacity: 1; }
 }
-
-.orbit span:nth-child(1){ top:0; left:50%; transform:translateX(-50%);}
-.orbit span:nth-child(2){ right:0; top:50%; transform:translateY(-50%);}
-.orbit span:nth-child(3){ bottom:0; left:50%; transform:translateX(-50%);}
-.orbit span:nth-child(4){ left:0; top:50%; transform:translateY(-50%);}
 
 @keyframes spin {
+  from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
 
-/* LOGO */
+/* logo */
 .logo {
-  position: absolute;
-  bottom: 40px;
-  left: 50%;
-  transform: translateX(-50%) scale(0.6);
+  font-size: 44px;
+  font-weight: bold;
+  margin-top: 22px;
   opacity: 0;
-  animation: logoIn 0.8s ease forwards;
+  animation: showLogo 0.8s ease forwards;
   animation-delay: 3.8s;
 }
 
-.logo h1 {
-  margin: 0;
-  font-size: 36px;
-  letter-spacing: 1px;
+.tagline {
+  font-size: 14px;
+  opacity: 0;
+  animation: showLogo 0.8s ease forwards;
+  animation-delay: 4.2s;
 }
 
-.logo p {
-  margin: 6px 0 0;
-  font-size: 13px;
-  opacity: 0.85;
-}
-
-@keyframes logoIn {
-  to {
-    opacity: 1;
-    transform: translateX(-50%) scale(1);
-  }
+@keyframes showLogo {
+  to { opacity: 1; }
 }
 </style>
 
@@ -166,34 +104,20 @@ setTimeout(() => {
 </head>
 
 <body>
+  <div class="scene">
+    <div class="people">🧑 🤝 🧑</div>
+    <div class="heart">❤️</div>
 
-<div class="scene">
+    <div class="resources">
+      <span>💬</span>
+      <span>🎵</span>
+      <span>💼</span>
+      <span>🛒</span>
+      <span>✈️</span>
+    </div>
 
-  <!-- PEOPLE -->
-  <div class="person left"></div>
-  <div class="person right"></div>
-
-  <!-- HANDSHAKE -->
-  <div class="handshake"></div>
-
-  <!-- HUG -->
-  <div class="hug"></div>
-
-  <!-- ORBITING APPS -->
-  <div class="orbit">
-    <span>💬</span>
-    <span>🎵</span>
-    <span>💼</span>
-    <span>🛒</span>
+    <div class="logo">HarDil</div>
+    <div class="tagline">Family First · One Place for Everything</div>
   </div>
-
-  <!-- LOGO -->
-  <div class="logo">
-    <h1>HarDil</h1>
-    <p>Family First · One Place for Everything</p>
-  </div>
-
-</div>
-
 </body>
 </html>
