--- a/splash.html
+++ b/splash.html
@@ -23,7 +23,7 @@ body {
 .splash-bg {
   position: fixed;
   inset: 0;
-  background: url("assets/images/hd-bg.jpg") center/cover no-repeat;
+  background: url("assets/images/hd-bg.jpg") center / cover no-repeat;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -32,80 +32,109 @@ body {
 .overlay {
   position: absolute;
   inset: 0;
-  background: radial-gradient(circle, rgba(0,0,0,0.2), rgba(0,0,0,0.6));
+  background:
+    radial-gradient(circle at center, rgba(0,0,0,0.15), rgba(0,0,0,0.65));
 }
 
-/* ===== LOGO ===== */
+/* ===== LOGO BLOCK ===== */
 .logo-wrap {
   position: relative;
   z-index: 5;
   text-align: center;
 }
 
+/* HD LOGO */
 .logo {
-  font-size: 4.5rem;
-  font-weight: 800;
-  color: #fff;
+  font-size: 4.8rem;
+  font-weight: 900;
   letter-spacing: 4px;
+
+  background: linear-gradient(
+    135deg,
+    #60a5fa,
+    #a78bfa,
+    #f472b6,
+    #22d3ee
+  );
+  background-size: 300% 300%;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+
   opacity: 0;
   transform: scale(0.6);
-  animation: logoPop 1.6s ease forwards;
+  animation:
+    logoPop 1.6s ease forwards,
+    gradientMove 5s ease infinite;
   animation-delay: 0.6s;
 }
 
+/* TAGLINE */
 .tagline {
-  margin-top: 10px;
-  font-size: 1rem;
+  margin-top: 12px;
+  font-size: 0.95rem;
   color: #e5e7eb;
   opacity: 0;
   animation: fadeUp 1.2s ease forwards;
-  animation-delay: 1.8s;
+  animation-delay: 1.9s;
 }
 
-/* ===== FLOATING ICONS ===== */
+/* ===== FLOATING ICON RING ===== */
 .icons {
   position: absolute;
-  width: 260px;
-  height: 260px;
+  width: 280px;
+  height: 280px;
   opacity: 0;
   animation: showIcons 1s ease forwards;
-  animation-delay: 2.4s;
+  animation-delay: 2.5s;
 }
 
 .icon {
   position: absolute;
   font-size: 1.6rem;
-  animation: float 4s ease-in-out infinite;
+  animation: orbit 10s linear infinite;
 }
 
-.icon:nth-child(1) { top: 0; left: 50%; animation-delay: 0s; }
-.icon:nth-child(2) { top: 20%; right: 0; animation-delay: .5s; }
-.icon:nth-child(3) { top: 50%; right: 0; animation-delay: 1s; }
-.icon:nth-child(4) { bottom: 20%; right: 0; animation-delay: 1.5s; }
-.icon:nth-child(5) { bottom: 0; left: 50%; animation-delay: 2s; }
-.icon:nth-child(6) { bottom: 20%; left: 0; animation-delay: 2.5s; }
-.icon:nth-child(7) { top: 50%; left: 0; animation-delay: 3s; }
-.icon:nth-child(8) { top: 20%; left: 0; animation-delay: 3.5s; }
-
-@keyframes float {
-  0%,100% { transform: translateY(0); }
-  50% { transform: translateY(-12px); }
-}
+/* evenly distributed */
+.icon:nth-child(1) { transform: rotate(0deg) translate(140px); }
+.icon:nth-child(2) { transform: rotate(45deg) translate(140px); }
+.icon:nth-child(3) { transform: rotate(90deg) translate(140px); }
+.icon:nth-child(4) { transform: rotate(135deg) translate(140px); }
+.icon:nth-child(5) { transform: rotate(180deg) translate(140px); }
+.icon:nth-child(6) { transform: rotate(225deg) translate(140px); }
+.icon:nth-child(7) { transform: rotate(270deg) translate(140px); }
+.icon:nth-child(8) { transform: rotate(315deg) translate(140px); }
 
 /* ===== ANIMATIONS ===== */
 @keyframes logoPop {
   0% { opacity: 0; transform: scale(0.6); }
-  60% { opacity: 1; transform: scale(1.1); }
+  60% { opacity: 1; transform: scale(1.08); }
   100% { opacity: 1; transform: scale(1); }
 }
 
 @keyframes fadeUp {
-  from { opacity: 0; transform: translateY(12px); }
+  from { opacity: 0; transform: translateY(14px); }
   to { opacity: 1; transform: translateY(0); }
+}
+
+@keyframes gradientMove {
+  0% { background-position: 0% 50%; }
+  50% { background-position: 100% 50%; }
+  100% { background-position: 0% 50%; }
 }
 
 @keyframes showIcons {
   to { opacity: 1; }
+}
+
+@keyframes orbit {
+  from { transform: rotate(0deg) translate(140px) rotate(0deg); }
+  to { transform: rotate(360deg) translate(140px) rotate(-360deg); }
+}
+
+/* MOBILE TUNING */
+@media (max-width: 600px) {
+  .logo { font-size: 3.8rem; }
+  .icons { width: 240px; height: 240px; }
 }
 </style>
 </head>
@@ -128,8 +157,7 @@ body {
   </div>
 
   <!-- LOGO -->
-  <div class="splash-container">
-    <div class="splash-content">
+  <div class="logo-wrap">
     <div class="logo">HD</div>
     <div class="tagline">Family First · One Place for Everything</div>
   </div>
