--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
   <meta charset="UTF-8" />
   <title>HarDil</title>
 
-  <!-- Splash control -->
+  <!-- Splash control (RUN ONCE PER SESSION – FIXED) -->
   <script>
-    if (!sessionStorage.getItem("harDilSplash")) {
-      window.location.replace("splash.html");
-    }
+    (function () {
+      try {
+        if (!sessionStorage.getItem("harDilSplash")) {
+          sessionStorage.setItem("harDilSplash", "pending");
+          window.location.replace("splash.html");
+        }
+      } catch (e) {
+        console.warn("Splash skipped:", e);
+      }
+    })();
   </script>
 
   <!-- Google Font -->
@@ -16,12 +23,11 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 
-  <!-- Mobile -->
+  <!-- Mobile / PWA -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="theme-color" content="#4f46e5" />
   <meta name="description" content="HarDil – Family First · One Place for Everything" />
 
-  <!-- PWA -->
   <link rel="manifest" href="manifest.json">
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -29,8 +35,8 @@
 <body>
 
 <!-- ===== TOP APP BAR ===== -->
-<header class="top-app-bar">
-  <span class="top-app-title">HarDil</span>
+<header class="top-app-bar glow-bar">
+  <span class="top-app-title gradient-text">HarDil</span>
   <span class="menu-icon">☰</span>
 </header>
 
@@ -73,10 +79,10 @@
 <div class="backdrop" id="backdrop"></div>
 
 <!-- ===== HERO ===== -->
-<header class="hero">
+<header class="hero hero-glow">
   <div class="brand">
-    <div class="heart"></div>
-    <h1>HarDil</h1>
+    <div class="heart glow-heart"></div>
+    <h1 class="gradient-text">HarDil</h1>
   </div>
   <p>Family First · One Place for Everything</p>
 </header>
@@ -85,156 +91,128 @@
 <main class="app">
 
 <!-- 🌐 SOCIAL -->
-<section class="card social reveal">
+<section class="card social reveal glow-card">
   <h2>🌐 Social Media</h2>
   <div class="grid">
-    <div class="app-btn" data-url="https://web.whatsapp.com"><img src="assets/icons/whatsapp.png"><span>WhatsApp</span></div>
-    <div class="app-btn" data-url="https://instagram.com"><img src="assets/icons/instagram.png"><span>Instagram</span></div>
-    <div class="app-btn" data-url="https://mail.google.com"><img src="assets/icons/gmail.png"><span>Gmail</span></div>
-    <div class="app-btn" data-url="https://web.telegram.org"><img src="assets/icons/telegram.png"><span>Telegram</span></div>
-    <div class="app-btn" data-url="https://facebook.com"><img src="assets/icons/facebook.png"><span>Facebook</span></div>
-    <div class="app-btn" data-url="https://twitter.com"><img src="assets/icons/twitter.png"><span>Twitter</span></div>
+    <div class="app-btn glow-btn" data-url="https://web.whatsapp.com"><img src="assets/icons/whatsapp.png"><span>WhatsApp</span></div>
+    <div class="app-btn glow-btn" data-url="https://instagram.com"><img src="assets/icons/instagram.png"><span>Instagram</span></div>
+    <div class="app-btn glow-btn" data-url="https://mail.google.com"><img src="assets/icons/gmail.png"><span>Gmail</span></div>
+    <div class="app-btn glow-btn" data-url="https://web.telegram.org"><img src="assets/icons/telegram.png"><span>Telegram</span></div>
+    <div class="app-btn glow-btn" data-url="https://facebook.com"><img src="assets/icons/facebook.png"><span>Facebook</span></div>
+    <div class="app-btn glow-btn" data-url="https://twitter.com"><img src="assets/icons/twitter.png"><span>Twitter</span></div>
   </div>
 </section>
 
 <!-- 💼 JOBS -->
-<section class="card jobs reveal">
+<section class="card jobs reveal glow-card">
   <h2>💼 Jobs & Career</h2>
   <p class="section-sub">Find jobs, internships & career growth</p>
-
   <div class="grid">
-    <div class="app-btn" data-url="https://www.linkedin.com/jobs">
-      <img src="assets/icons/linkedin.png"><span>LinkedIn</span>
-    </div>
-
-    <div class="app-btn" data-url="https://www.naukri.com">
-      <img src="assets/icons/naukri.png"><span>Naukri</span>
-    </div>
-
-    <div class="app-btn" data-url="https://www.indeed.com">
-      <img src="assets/icons/indeed.png"><span>Indeed</span>
-    </div>
-
-    <div class="app-btn" data-url="https://www.glassdoor.com">
-      <img src="assets/icons/glassdoor.png"><span>Glassdoor</span>
-    </div>
-
-    <div class="app-btn" data-url="https://www.foundit.in">
-      <img src="assets/icons/foundit.png"><span>Foundit</span>
-    </div>
-
-    <div class="app-btn" data-url="https://unstop.com">
-      <img src="assets/icons/unstop.png"><span>Unstop</span>
-    </div>
-
-    <div class="app-btn" data-url="https://www.shine.com">
-      <img src="assets/icons/shine.png"><span>Shine</span>
-    </div>
-
-    <div class="app-btn" data-url="https://cutshort.io">
-      <img src="assets/icons/cutshort.png"><span>CutShort</span>
-    </div>
-
-    <div class="app-btn" data-url="https://internshala.com">
-      <img src="assets/icons/internshala.png"><span>Internshala</span>
-    </div>
+    <div class="app-btn glow-btn" data-url="https://www.linkedin.com/jobs"><img src="assets/icons/linkedin.png"><span>LinkedIn</span></div>
+    <div class="app-btn glow-btn" data-url="https://www.naukri.com"><img src="assets/icons/naukri.png"><span>Naukri</span></div>
+    <div class="app-btn glow-btn" data-url="https://www.indeed.com"><img src="assets/icons/indeed.png"><span>Indeed</span></div>
+    <div class="app-btn glow-btn" data-url="https://www.glassdoor.com"><img src="assets/icons/glassdoor.png"><span>Glassdoor</span></div>
+    <div class="app-btn glow-btn" data-url="https://www.foundit.in"><img src="assets/icons/foundit.png"><span>Foundit</span></div>
+    <div class="app-btn glow-btn" data-url="https://unstop.com"><img src="assets/icons/unstop.png"><span>Unstop</span></div>
+    <div class="app-btn glow-btn" data-url="https://www.shine.com"><img src="assets/icons/shine.png"><span>Shine</span></div>
+    <div class="app-btn glow-btn" data-url="https://cutshort.io"><img src="assets/icons/cutshort.png"><span>CutShort</span></div>
+    <div class="app-btn glow-btn" data-url="https://internshala.com"><img src="assets/icons/internshala.png"><span>Internshala</span></div>
   </div>
 </section>
 
-
 <!-- 🎬 OTT -->
-<section class="card ott reveal">
+<section class="card ott reveal glow-card">
   <h2>🎬 OTT Platforms</h2>
   <div class="grid">
-    <div class="app-btn" data-url="https://netflix.com"><img src="assets/icons/netflix.png"><span>Netflix</span></div>
-    <div class="app-btn" data-url="https://primevideo.com"><img src="assets/icons/prime.png"><span>Prime</span></div>
-    <div class="app-btn" data-url="https://hotstar.com"><img src="assets/icons/hotstar.png"><span>Hotstar</span></div>
-    <div class="app-btn" data-url="https://youtube.com"><img src="assets/icons/youtube.png"><span>YouTube</span></div>
+    <div class="app-btn glow-btn" data-url="https://netflix.com"><img src="assets/icons/netflix.png"><span>Netflix</span></div>
+    <div class="app-btn glow-btn" data-url="https://primevideo.com"><img src="assets/icons/prime.png"><span>Prime</span></div>
+    <div class="app-btn glow-btn" data-url="https://hotstar.com"><img src="assets/icons/hotstar.png"><span>Hotstar</span></div>
+    <div class="app-btn glow-btn" data-url="https://youtube.com"><img src="assets/icons/youtube.png"><span>YouTube</span></div>
   </div>
 </section>
 
 <!-- 🎵 MUSIC -->
-<section class="card music reveal">
+<section class="card music reveal glow-card">
   <h2>🎵 Music</h2>
   <div class="grid">
-    <div class="app-btn" data-url="https://spotify.com"><img src="assets/icons/spotify.png"><span>Spotify</span></div>
-    <div class="app-btn" data-url="https://music.youtube.com"><img src="assets/icons/youtubemusic.png"><span>YouTube Music</span></div>
-    <div class="app-btn" data-url="https://gaana.com"><img src="assets/icons/gaana.png"><span>Gaana</span></div>
-    <div class="app-btn" data-url="https://jiosaavn.com"><img src="assets/icons/jiosaavn.png"><span>JioSaavn</span></div>
+    <div class="app-btn glow-btn" data-url="https://spotify.com"><img src="assets/icons/spotify.png"><span>Spotify</span></div>
+    <div class="app-btn glow-btn" data-url="https://music.youtube.com"><img src="assets/icons/youtubemusic.png"><span>YouTube Music</span></div>
+    <div class="app-btn glow-btn" data-url="https://gaana.com"><img src="assets/icons/gaana.png"><span>Gaana</span></div>
+    <div class="app-btn glow-btn" data-url="https://jiosaavn.com"><img src="assets/icons/jiosaavn.png"><span>JioSaavn</span></div>
   </div>
 </section>
 
 <!-- 🛒 SHOPPING -->
-<section class="card shop reveal">
+<section class="card shop reveal glow-card">
   <h2>🛒 Shopping</h2>
   <div class="grid">
-    <div class="app-btn" data-url="https://amazon.in"><img src="assets/icons/amazon.png"><span>Amazon</span></div>
-    <div class="app-btn" data-url="https://flipkart.com"><img src="assets/icons/flipkart.png"><span>Flipkart</span></div>
-    <div class="app-btn" data-url="https://myntra.com"><img src="assets/icons/myntra.png"><span>Myntra</span></div>
-    <div class="app-btn" data-url="https://ajio.com"><img src="assets/icons/ajio.png"><span>Ajio</span></div>
-    <div class="app-btn" data-url="https://meesho.com"><img src="assets/icons/meesho.png"><span>Meesho</span></div>
+    <div class="app-btn glow-btn" data-url="https://amazon.in"><img src="assets/icons/amazon.png"><span>Amazon</span></div>
+    <div class="app-btn glow-btn" data-url="https://flipkart.com"><img src="assets/icons/flipkart.png"><span>Flipkart</span></div>
+    <div class="app-btn glow-btn" data-url="https://myntra.com"><img src="assets/icons/myntra.png"><span>Myntra</span></div>
+    <div class="app-btn glow-btn" data-url="https://ajio.com"><img src="assets/icons/ajio.png"><span>Ajio</span></div>
+    <div class="app-btn glow-btn" data-url="https://meesho.com"><img src="assets/icons/meesho.png"><span>Meesho</span></div>
   </div>
 </section>
 
 <!-- ✈️ TRAVEL -->
-<section class="card travel reveal">
+<section class="card travel reveal glow-card">
   <h2>✈️ Travel</h2>
   <div class="grid">
-    <div class="app-btn" data-url="https://irctc.co.in"><img src="assets/icons/irctc.png"><span>IRCTC</span></div>
-    <div class="app-btn" data-url="https://makemytrip.com"><img src="assets/icons/makemytrip.png"><span>MakeMyTrip</span></div>
-    <div class="app-btn" data-url="https://redbus.in"><img src="assets/icons/redbus.png"><span>RedBus</span></div>
+    <div class="app-btn glow-btn" data-url="https://irctc.co.in"><img src="assets/icons/irctc.png"><span>IRCTC</span></div>
+    <div class="app-btn glow-btn" data-url="https://makemytrip.com"><img src="assets/icons/makemytrip.png"><span>MakeMyTrip</span></div>
+    <div class="app-btn glow-btn" data-url="https://redbus.in"><img src="assets/icons/redbus.png"><span>RedBus</span></div>
   </div>
 </section>
 
 <!-- 🚕 RIDES -->
-<section class="card rides reveal">
+<section class="card rides reveal glow-card">
   <h2>🚕 Rides</h2>
   <div class="grid">
-    <div class="app-btn" data-url="https://uber.com"><img src="assets/icons/uber.png"><span>Uber</span></div>
-    <div class="app-btn" data-url="https://olacabs.com"><img src="assets/icons/ola.png"><span>Ola</span></div>
-    <div class="app-btn" data-url="https://rapido.bike"><img src="assets/icons/rapido.png"><span>Rapido</span></div>
-    <div class="app-btn" data-url="https://nammayatri.in"><img src="assets/icons/nammayatri.png"><span>Namma Yatri</span></div>
+    <div class="app-btn glow-btn" data-url="https://uber.com"><img src="assets/icons/uber.png"><span>Uber</span></div>
+    <div class="app-btn glow-btn" data-url="https://olacabs.com"><img src="assets/icons/ola.png"><span>Ola</span></div>
+    <div class="app-btn glow-btn" data-url="https://rapido.bike"><img src="assets/icons/rapido.png"><span>Rapido</span></div>
+    <div class="app-btn glow-btn" data-url="https://nammayatri.in"><img src="assets/icons/nammayatri.png"><span>Namma Yatri</span></div>
   </div>
 </section>
 
 <!-- 🍔 FOOD -->
-<section class="card food reveal">
+<section class="card food reveal glow-card">
   <h2>🍔 Food Delivery</h2>
   <div class="grid">
-    <div class="app-btn" data-url="https://zomato.com"><img src="assets/icons/zomato.png"><span>Zomato</span></div>
-    <div class="app-btn" data-url="https://swiggy.com"><img src="assets/icons/swiggy.png"><span>Swiggy</span></div>
-    <div class="app-btn" data-url="https://dominos.co.in"><img src="assets/icons/dominos.png"><span>Domino’s</span></div>
-    <div class="app-btn" data-url="https://pizzahut.co.in"><img src="assets/icons/pizzahut.png"><span>Pizza Hut</span></div>
+    <div class="app-btn glow-btn" data-url="https://zomato.com"><img src="assets/icons/zomato.png"><span>Zomato</span></div>
+    <div class="app-btn glow-btn" data-url="https://swiggy.com"><img src="assets/icons/swiggy.png"><span>Swiggy</span></div>
+    <div class="app-btn glow-btn" data-url="https://dominos.co.in"><img src="assets/icons/dominos.png"><span>Domino’s</span></div>
+    <div class="app-btn glow-btn" data-url="https://pizzahut.co.in"><img src="assets/icons/pizzahut.png"><span>Pizza Hut</span></div>
   </div>
 </section>
 
 <!-- 🩺 HEALTH -->
-<section class="card health reveal">
+<section class="card health reveal glow-card">
   <h2>🩺 Health & Pharmacy</h2>
   <div class="grid">
-    <div class="app-btn" data-url="https://1mg.com"><img src="assets/icons/1mg.png"><span>Tata 1mg</span></div>
-    <div class="app-btn" data-url="https://pharmeasy.in"><img src="assets/icons/pharmeasy.png"><span>PharmEasy</span></div>
-    <div class="app-btn" data-url="https://practo.com"><img src="assets/icons/practo.png"><span>Practo</span></div>
-    <div class="app-btn" data-url="https://apollo247.com"><img src="assets/icons/apollo.png"><span>Apollo 24/7</span></div>
+    <div class="app-btn glow-btn" data-url="https://1mg.com"><img src="assets/icons/1mg.png"><span>Tata 1mg</span></div>
+    <div class="app-btn glow-btn" data-url="https://pharmeasy.in"><img src="assets/icons/pharmeasy.png"><span>PharmEasy</span></div>
+    <div class="app-btn glow-btn" data-url="https://practo.com"><img src="assets/icons/practo.png"><span>Practo</span></div>
+    <div class="app-btn glow-btn" data-url="https://apollo247.com"><img src="assets/icons/apollo.png"><span>Apollo 24/7</span></div>
   </div>
 </section>
 
 <!-- 🏏 SPORTS -->
-<section class="card sports reveal">
+<section class="card sports reveal glow-card">
   <h2>🏏 Sports</h2>
   <div class="grid">
-    <div class="app-btn" data-url="https://cricbuzz.com"><img src="assets/icons/cricbuzz.png"><span>Cricbuzz</span></div>
-    <div class="app-btn" data-url="https://hotstar.com/sports"><img src="assets/icons/hotstar.png"><span>Hotstar Sports</span></div>
+    <div class="app-btn glow-btn" data-url="https://cricbuzz.com"><img src="assets/icons/cricbuzz.png"><span>Cricbuzz</span></div>
+    <div class="app-btn glow-btn" data-url="https://hotstar.com/sports"><img src="assets/icons/hotstar.png"><span>Hotstar Sports</span></div>
   </div>
 </section>
 
 <!-- 🧠 LEARNING -->
-<section class="card personality reveal">
+<section class="card personality reveal glow-card">
   <h2>🧠 Learning & Growth</h2>
   <div class="grid">
-    <div class="app-btn" data-url="https://ted.com"><img src="assets/icons/ted.png"><span>TED</span></div>
-    <div class="app-btn" data-url="https://coursera.org"><img src="assets/icons/coursera.png"><span>Coursera</span></div>
-    <div class="app-btn" data-url="https://udemy.com"><img src="assets/icons/udemy.png"><span>Udemy</span></div>
+    <div class="app-btn glow-btn" data-url="https://ted.com"><img src="assets/icons/ted.png"><span>TED</span></div>
+    <div class="app-btn glow-btn" data-url="https://coursera.org"><img src="assets/icons/coursera.png"><span>Coursera</span></div>
+    <div class="app-btn glow-btn" data-url="https://udemy.com"><img src="assets/icons/udemy.png"><span>Udemy</span></div>
   </div>
 </section>
 
@@ -243,7 +221,7 @@
 <footer class="footer">
   HarDil strictly redirects users to official websites only.<br>
   No logins stored · No payments · No betting.<br>
-  Family First — Always.
+  <strong>Family First — Always.</strong>
 </footer>
 
 <script src="app.js"></script>
